--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
-   <head>Git Project</head>
+   <head>
+    <link rel="stylesheet" href="styles.css">
+   </head>
     <body>Git and Github Tutorial!!!</body>
 </html>
